# iamprover

./: .gitignore  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  demo.yml  publish.yml
demo/: demo.tape
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md
examples/: README.md  account.json  chain-account.json  gaad.json  invariants.yaml  scp.json
scripts/: benchmark.py
src/iamprover/: cli.py  invariants.py  model.py  privesc.py  report.py
src/iamprover/data/: privesc.yaml
src/iamprover/engine/: conditions.py  context.py  encoder.py  patterns.py  reachability.py  solver.py  trust.py
src/iamprover/parsers/: aws.py  iam.py  terraform.py
tests/: test_aws_gaad.py  test_boundaries.py  test_conditions.py  test_engine.py  test_invariants.py  test_patterns.py  test_privesc.py  test_reachability.py  test_resource_policies.py  test_terraform.py  test_trust.py  test_variables.py
