[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iamprover"
version = "0.2.0"
description = "Formally verify security invariants over AWS IAM policies using an SMT solver (Z3), with counterexample traces."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Utkarsh Batham", email = "udaydeepak1928@gmail.com" }]
keywords = ["aws", "iam", "security", "formal-verification", "smt", "z3", "policy", "cspm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "z3-solver>=4.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
iamprover = "iamprover.cli:main"

[project.urls]
Homepage = "https://github.com/utkarsh698/iamprover"

[tool.hatch.build.targets.wheel]
packages = ["src/iamprover"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
